--- a/note/08nov2020/index.html
+++ b/note/08nov2020/index.html
@@ -44,7 +44,7 @@ Made by me. Apa lihat-lihat?
 								<li><b>- Awalnya…</b></li>
 								<li></li>
 							</ul>
-							<span class="image left"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic01.jpg" width="177" height="163" alt="" /></span>
+							<span class="image left"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic01_.jpg" alt="" /></span>
 							<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Pada saat itu hari senin, tepatnya minggu kedua di bulan november. Satu hari yang baik untuk memulai kembali segala hal dari awal (kupikir). Seperti senin yang memulai kembali hari dari tiap minggunya. Untuk ulang tahunku esok, kuharap segala hal baru yang kudapati kelak mengubahku dan memberi arti baru pada diri ini. Mengingat di hari sebelumnya telah ada jadwal untuk ikut berproses pada salah satu hobi lama, bermain teater. Yang ku ingin hanyalah mencari kesenangangan pada hari ulang tahunku esok dan tiada hal lain selain harapan yang telah kusebut tadi. Namun kau tau?, yang kutemukan lebih dari yang kuharap !!.</p>
 							<p>Hari itu pun tiba, terbangun seperti biasa, makan seperti biasa, semua hal biasa mengawali hari itu. Ini ulang tahunku, tentu saja ucapan selamat ulang tahun dari teman-teman meramaikan handphone. Yap, “sok ngartis” benar sekali!. Hari itu, semua yang memberiku ucapan ulang tahun masuk ke snap whatsapp. Jadi, kamu pikir siapa yang mau pura-pura tak melihat kalau aku sedang berulang tahun?. Maksudku, tak mungkin ada yang mengingat bila hal tersebut tak kulakukan. Lantas untuk apa kulakukan katamu?, hanya ada segelintir hal yang sangat dekat sebelum aku berkipir untuk menjadi artis(wkwk). Hanya secuil apresiasi lah yang ingin kuberi pada orang yang benar2 mengingat ulang tahunku. Di sisi lain, untuk mereka yang melihat dari snap aku hanya ingin berterimakasih.</p>
 							<p>Semua hal biasa di hari itu terasa lebih menyenangkan, sudah jelas, karena hari ini hari ulang tahunku. Tertinggal jauh dibelakang untuk segala pikiran burukku, terimakasih atas hari ini, sungguh diriku benar-benar bersyukur.</p>
@@ -90,16 +90,14 @@ Made by me. Apa lihat-lihat?
 					</div>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						  <h>Apa-apa aja yang ada disini, uda disiapin sejak lama bahkan sebelum aku mulai berbicara tentang hal ini. Aku harap aora suka, meskipun cuman sekedar bacain hal kecil seperti ini. Terimakasih ❤️ !!</a>.</h>
+			<footer id="footer">
+				<div class="inner">
+					  <h>Apa-apa aja yang ada disini, uda disiapin sejak lama bahkan sebelum aku mulai berbicara tentang hal ini. Aku harap Aora suka, meskipun cuman sekedar bacain hal kecil seperti ini. Terimakasih ❤️ !!</a>.</h>
 					<ul class="copyright">
-					<li>Untuk segala harapmu, semangat !!</li>
-					<li>Masih kepo sama sesutu ? sini coba.</li>
-					</ul>
-				  	</div>
-					</footer>
-					</div>
+						<li>Untuk segala harapmu, semangat !!</li>
+					</ul> 
+				  </div>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="https://shiroezero.github.io/aorasaphiere/note/assets/js/jquery.min.js"></script>
