--- a/note/08nov2020/index.html
+++ b/note/08nov2020/index.html
@@ -32,7 +32,7 @@ Made by me. Apa lihat-lihat?
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="https://shiroezero.github.io/aorasaphiere/note/">Home</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere/note/">Index Cerita</a></li>
 						</ul>
 					</nav>
 
@@ -61,6 +61,7 @@ Made by me. Apa lihat-lihat?
 								<li><b>-Sesi diam dimulai…</b></li>
 								<li></li>
 							</ul>
+							<span class="image rights"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic02_.jpg" alt="" /></span>
 							<p>Diam, diam, dan diam. Seperti tak ada lagi kalimat tuk kuucap sehari itu. Diriku hanya bisa sedikit berkata akan hal yang mungkin bisa kukerjakan saja. Terlepas dari hal itu, aku yang melihat kalian (PGT), merasa tertinggal jauh soal dunia per-teater-an. Apalagi setelah tau apa yang aku bisa lakukan disini adalah jauh dari apa yang ingin aku kerjakan. Maksudku, kalian telah terbagi dengan job-desc kalian masing-masing. Sedang aku baru, dan tak tau apa yang harus kulakukan.</p>
 							<blockquote>“Aku tak bisa terus diam seperti ini, aku harus mulai bicara”</blockquote>
 							<p>Hal yang pertama kali aku pikirkan adalah tentang pembagian job-desc saat itu. Setelah tau kalau Kak Nisa adalah seorang pimpinan produksi, tak lagi tahan mulut ini untuk segera bercakap ria tentang apa yang aku bisa lakukan di kegiatan kali ini. Hingga akhirnya, Waktu itu kita berdiskusi tentang media, dan kak nisa setuju soal apa yang kita sepakati tentang job-desc ku.</p>
