--- a/note/index.html
+++ b/note/index.html
@@ -38,7 +38,6 @@ Yahya Arya Putra, 14 april 2021
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="https://shiroezero.github.io/aorasaphiere/note">Home</a></li>
-							<li><a href="https://shiroezero.github.io/aorasaphiere/tekenaja.html">Teken aja!</a></li>
 						</ul>
 					</nav>
 
@@ -52,7 +51,7 @@ Yahya Arya Putra, 14 april 2021
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="08nov2020/">
 										<h2>08 November 2020</h2>
@@ -63,25 +62,23 @@ Yahya Arya Putra, 14 april 2021
 							  </article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="diamku/">
-										<h2>Diamku.</h2>
+									<a href="janji/">
+										<h2>Janjimu.</h2>
 										<div class="content">
-											<p>"Karena ngeliat kamu waktu kamu tiba-tiba liat balik ke aku, sungguh merupakan hal menyenangkan paling memalukan."
-												-Desember,2020.
-											</p>
+											<p>Bicara soal janji yang pernah kamu berikan!. Juga secuil kepercayaan yang mulai aku tanamkan.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="jawaban/">
+										<h2>3 jawaban buatmu!</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Dari apa yang kamu tanyakan kemarin!, uda dijawab nih loo!!</p>
 										</div>
 									</a>
 								</article>
@@ -103,7 +100,7 @@ Yahya Arya Putra, 14 april 2021
 									<a href="jawaban/">
 										<h2>3 jawaban buatmu!</h2>
 										<div class="content">
-											<p>Dari apa yang kamu tanyain kemarin!</p>
+											<p>Dari apa yang kamu tanyakan kemarin!</p>
 										</div>
 									</a>
 								</article>
@@ -112,9 +109,10 @@ Yahya Arya Putra, 14 april 2021
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>Diamku.</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>"Karena ngeliat kamu waktu kamu tiba-tiba liat balik ke aku, sungguh merupakan hal menyenangkan paling memalukan."
+												-Desember,2020.</p>
 										</div>
 									</a>
 								</article>
@@ -148,10 +146,10 @@ Yahya Arya Putra, 14 april 2021
 		      
 		      <footer id="footer">
 						<div class="inner">
-						  <h>Apa-apa aja yang ada disini, uda disiapin sejak lama bahkan sebelum aku mulai berbicara tentang hal ini. Aku harap aora suka, meskipun cuman sekedar bacain hal kecil seperti ini. Terimakasih ❤️ !!&nbsp; <a href="https://shiroezero.github.io/aorasaphiere">klik sini !</a>.</h>
+						  <h>Apa-apa aja yang ada disini, uda disiapin sejak lama bahkan sebelum aku mulai berbicara tentang hal ini. Aku harap aora suka, meskipun cuman sekedar bacain hal kecil seperti ini. Terimakasih ❤️ !!</a>.</h>
 					<ul class="copyright">
 		<li>Untuk segala harapmu, semangat !!</li>
-		<li>Masih kepo sama sesutu ? sini coba.</li>
+		<li>Masih kepo sama sesutu ? <a href="clue/">Here!</a></li>
 							</ul>
 				  </div>
 					</footer>
