--- a/note/janji/index.html
+++ b/note/janji/index.html
@@ -32,7 +32,7 @@ Made by me. Apa lihat-lihat?
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="https://shiroezero.github.io/aorasaphiere/note/">Home</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere/note/">Index Cerita</a></li>
 						</ul>
 					</nav>
 
@@ -40,10 +40,41 @@ Made by me. Apa lihat-lihat?
 					<div id="main">
 						<div class="inner">
 							<h1>Janjimu ?</h1>
-							<span class="image left"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic04.jpg" width="177" height="163" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<span class="image left"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic03_.jpg" alt="" /></span>
+							<p><i>Kali ini adalah tentang hal setulus perasaan, sesuatu yang kau ucap dengan kalimat, dan menjadikannya hidup untuk kau tepati selama yang kau bisa. Untuk terus mengingatnya adalah sebuah pilihan, tergantung bagaimana dirimu menyikapinya, serta bagaimana janji itu dinyatakan. Namun lupa tak pernah salah, manusiawi-lah jawabannya. Namun untuk tak menepatinya, itu adalah tugas yang kau punya untuk kau tanyakan pada dirimu sendiri.</i> – Yahya Arya Putra, 2021.</p>
+							<p>Untuk janji yang kamu buat dulu, hal ini kukatakan bukan semata untuk mengingatkanmu akan janji ini. Namun, janji ini adalah hal yang dulu pernah kamu buat, hal manis yang aku dapat darimu. Secuil kepercayaan yang dulu sempat aku berikan dan singgah di kehidupanmu. Hal tersirat yang secara tidak langsung sedang menawar kepercayaanku, hingga kuberanikan diri untuk memberikan lagi kepercayaan ini.</p>
+							<p>Sebatas janji?, untuk hal sekecil itu merupakan kepercayaan yang hidup. Diri ini percaya, bahwa untuk seseorang yang tidak dapat menjaga janjinya dariku, takkan lagi bisa kupercaya untuk kedua kalinya. Pasti akan ada rasa takut yang tumbuh, hal itu menjadi akan menjadi meski dalam langkahku tuk kembali percaya. Tetaplah bukan mustahil untuk kembali percaya pada seseorang itu, kutakin tak ada seorang pun yangkan mampu tuk kembali percaya atas kekecawaan.</p>
+							<ul class="alt">
+								<li><b>- Untuk pertamakalinya darimu!</b></li>
+								<li></li>
+							</ul>
+							<p><code><i>13 – 12 – 2020</i></code> , Kamu mengetahui salah satu hal yang tak orang atau teman biasa ketahui dariku. Aku percayakan kamu untuk mengetahui hal ini pada saat pertama kalinya mengikat janji denganku. Ingat?, aku memiliki kelebihan yang menurutku tak perlu untuk kuceritakan sejujurnya, Memiliki sesuatu seperti itu bukan hal yang normal untukku. Untuk mengetahui sesuatu yang tak seharusnya kuketahui jalan/ tempatnya. Kupikir, dengan menceritakannya padamu waktu itu, akan membuatmu menjauh dariku. Karena kau tau?, bahkan aku berpikir bahwa diriku sendiri adalah seseorang yang aneh. Apalagi dengan suatu kelebihan seperti ini.</p>
+							<p>“Terus kadang juga bisa ngelayap kek hantu!”, salah satu kata yang kuucap waktu itu. Pikiran buruk telah datang untuk membuatku takut akan jawabmu, Namun ternyata kau malah menjawab “Ajarin, aku jugak mau”. Renungku dalam hati; “Wait a moment.., nih anak bercanda ya?”. Ga habis pikir akan jawabanmu waktu itu. Entah hanya sebatas pada candaan atau apapun waktu itu. Yang jelas saat itu aku tau, untuk menyakiti hati orang lain bukanlah dirimu.</p>
+							<blockquote>“Untuk hati sebaik itu dari seorang perempuan, lelaki mana yang akan mengabaikanmu. Kini khawatir dapat beraslasan untuk mengusikku.”</blockquote>
+							<ul class="alt">
+								<li><b>- Kedua kalinya setalah kemarin!.</b></li>
+								<li></li>
+							</ul>
+							<p><code><i>14 – 23 – 2020</i></code>, “Apa yang kamu tanyain di nomer 3 kemarin?, hopeless?”. Janji kali ini adalah pangkal dari pertanyaanmu kemarin!. Mungkin di hari itu pikiran Aora hanya ada pada batas pertanyaan; “Sakit yaa?, hayo yahya, Astaghfirullah anak ini”, katamu soal pernyataanku tentang sakitku (Khawatir banget, cieee wkwk). Kali ini, janjimu adalah untuk tak berpikir yang aneh-aneh soal apa yang akan kuceritakan waktu itu. Janji ini sendiri sebenernya bukanlah janji, tapi tiba-tiba ada foto jari kelingking seorang perempuan cantik di ruang chat waktu itu. Hingga akhirnya, sekali lagi aku percayakan sesuatu ke dirimu, kali itu aku tau bahwa diri ini gabakal dilihat lemah oleh seorang Aora Saphiere Devinatasya karena riwayat sakit ku dulu. Aku tak mau dilihat lemah, namun bukannya aku menolak perhatian darimu. Tolong, itu 2 hal yang berbeda ya!.</p>
+							<p>Soal perhatian, semenjak iseng hingga terkandung niat tulus. Aku melihat semuanya senyata kehadiranmu, tak pernah peduli kepada iseng atau tulusnya perhatianmu. Ingatlah, bahwa perasaan yang kau hantar itu nyata. Terlebih untuk seseorang yang baru kau kenal dan tak pernah mengerti bagaimana kondisinya. Bahkan untukku saat itu, jujur, aku seperti menemukan rumah yang nyaman atas perhatian iseng itu. Untungnya kenyataan soal iseng ini kuketahui setelah ungkap-perasaan dariku malam itu. Kalau saja aku tau semua itu iseng, mungkin takkan pernah ada keberanian untuk memulai kembali chat kala itu.</p>
+							<blockquote>“Salahku unutuk menaruh perasaan kepada perhatian saat itu, namun salahkah aku atas nyaman pada apa yang kudapat darimu?, perhatian waktu itu?. Sungguh aku belajar sesuatu darimu hari itu.”</blockquote>
+							<ul class="alt">
+								<li><b>-	Untuk yang ketiga, pas kita udah kenyang!</b></li>
+								<li></li>
+							</ul>
+							<span class="image rights"><img src="https://shiroezero.github.io/aorasaphiere/note/images/pic04_.jpg" alt="" /></span>
+							<p><code><i>13 – 03 – 2021</i></code>, Sepulang kumpul dari hatedu!. Pada perjalanan menuju tempat yang aku gatau harus kemana, kamu bilang; “Kamu gapengen ngajak makan ta beli apa gtu?”, yaampun sumpah deh, maafin Yahya kalo soal begituan ya Aora, sampe kamu bilang “gausa deh gajadi”. Pas kamu bilang itu rasane kek, “Bego banget seh jadi cowok astaga!!”. Yahya nih emang paling susah kalo soal mikir-mikir begituan, mauku mungkin yang simple-simple aja gitu. Soalnya emang aku ngga pernah pengalaman untuk keluar-keluar begitu, bahkan sama mantan(maksudku keluar secara improvisasi).</p>
+							<p>So sorry banget, inisiatif pasti ada kok, sikonnya aja yang kurang pas. Tapi tolong banget, jangan pernah diem lain kali, yaya lebih suka kalo kamu bilang kek gitu 😊. Janganpernah nganggep kalo aku mikir kamu anaknya kek gimana ya!, aku yang minta jadi tolong ngomong 😊. Jadinya permintaan maaf nih, huhu.</p>
+							<p><i>Kembali lagi deh...</i></p>
+							<p>Jadi soal janji kala itu, adalah tentang khawatirku akan dirimu. Landasannya adalah rasa kesal akan acuhmu terhadap khawatirku. Takkan pernah ada larangan untukmu pergi kemana, hanya aku ingin tau bagaimana kabarmu dan keadaanmu saat itu. Setidaknya aku tenang saat dirimu sudah dirumah atau sampai ke tujuanmu dengan selamat, hanya itu.</p>
+							<blockquote>“You can go anywhere you wanted to go, i have no rights to forbid you. So please, just lemme’ know that you are safe, whenever and anywhere you are.”</blockquote>
+							<p>Maaf kalau aku terkesan mengekang, sejujurnya takkan ada ikhtisar tuk selalu bertanya akan hal seperti ini. Namun, untuk mendapati kabar cidera darimu secara tiba-tiba tanpa aku tau dimana dirimu saat itu. Aku akan sangat merasa bersalah akan diriku. Aku pikir, setidaknya doa atau omelanku padamu akan membantu. Hanya itu yang kupikir, sekali lagi maaf.</p>
+							<ul class="alt">
+								<li><b>-	Udah.</b></li>
+								<li></li>
+							</ul>
+							<p>3 janji darimu, inget ga tuh?, check aja chatnya. Terimakasih sudah mau dipercaya dan percaya juga padaku. Bagaimana?, akankah menanti janji lagi?, kurasa tidak!. Aku tau perbuatan akan lebih bermakna ketimbang bualan belaka. Namun, untuk hal seperti ini, bukannya untuk diabaikan. Malah inilah sedikit hal yang membuat cerita tak hanya pada batas datar. Terimakasih buatmu, aku tau aku banyak maunya, yang sabar ya cantik!, hehe.</p>
+							<i>3 April 2020, Yahya Arya Putra.</i>
 						</div>
 					</div>
 
