--- a/note/jawaban/index.html
+++ b/note/jawaban/index.html
@@ -32,7 +32,7 @@ Made by me. Apa lihat-lihat?
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="https://shiroezero.github.io/aorasaphiere/note/">Home</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere/note/">Index Cerita</a></li>
 						</ul>
 					</nav>
 
