--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu bua
 		<!-- Header -->
 			<header id="header">
 				<h1>
-					19 Tahun!</h1>
+					Happy Birthday, Aora!</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Ucapku</a></li>
 						<li><a href="#one">Sedikit Harapku</a></li>
-						<li><a href="#two">Aku, buatmu</a></li>
+						<li><a href="#two">Sesuatu</a></li>
 						<li><a href="#work">5 Bulan</a></li>
 						<li><a href="#contact">Jadi,</a></li>
 					</ul>
@@ -34,7 +34,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu bua
 					<header>
 						<h2>Ucapku.</h2>
 					</header>
-					<p>Heyy kamuuu?!, Kaget ga hayo?!?.&nbsp;<strong>Selamat Ulang Tahun&nbsp;</strong> Kamuu!!. Di umur yang ke 19 tahun ini, dalah segala harap terbaik bagimu, agar senyummu dapat selalu merekah indah selalu !. Sayang kamu !!</p>
+					<p>Heyy kamuuu?!, Ciee ulang tahun ya!, wkwk.&nbsp;<strong>Selamat Ulang Tahun&nbsp;</strong> Cantik!!. Di umur yang ke-19 tahun ini, yang kuharap adalah segala harap terbaik bagimu, agar senyummu dapat selalu merekah indah selalu !. Sayang kamu !!</p>
 					<footer>
 						<a href="#one" class="button style2 down">Kebawahh!</a>
 					</footer>
@@ -58,7 +58,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu bua
 					<header>
 						<h2>Sesuatu</h2>
 					</header>
-					<p></p>
+					<p>Untuk semua yang ada disini emang gabanyak sih, but ya. Hope ur have fun with this one, hehe. Really hope that ur gonna like it!. "Oiya kalo nyari sesuatu, kalo ganemu nanti deh aku kasih tau!, wkwk", Happy hunting too!.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -107,7 +107,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu bua
 
 						<p>Happy reading !, Searching, or maybe lookin’ for somethin' !, wkwk.</p>
 					</header>
-</div>
+				</div>
 			</section>
 
 		<!-- Footer -->
