--- a/note/index.html
+++ b/note/index.html
@@ -20,7 +20,7 @@ Yahya Arya Putra, 14 april 2021
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">🎉SELAMAT ULANG TAHUN!!🎉</span>
+									<span class="title">🎉SELAMAT ULANG TAHUN!!🎉</span>
 								</a>
 
 							<!-- Nav -->
@@ -149,7 +149,7 @@ Yahya Arya Putra, 14 april 2021
 						  <h>Apa-apa aja yang ada disini, uda disiapin sejak lama bahkan sebelum aku mulai berbicara tentang hal ini. Aku harap aora suka, meskipun cuman sekedar bacain hal kecil seperti ini. Terimakasih ❤️ !!</a>.</h>
 					<ul class="copyright">
 		<li>Untuk segala harapmu, semangat !!</li>
-		<li>Masih kepo sama sesutu ? <a href="clue/">Here!</a></li>
+		<li>Masih kepo sama sesutu ? <a href="clue01/">Here!</a></li>
 							</ul>
 				  </div>
 					</footer>
