--- a/note/index.html
+++ b/note/index.html
@@ -84,7 +84,7 @@ Yahya Arya Putra, 14 april 2021
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/" alt="" />
 									</span>
 									<a href="janji/">
 										<h2>Janjimu ?</h2>
