--- a/note/index.html
+++ b/note/index.html
@@ -95,7 +95,7 @@ Yahya Arya Putra, 14 april 2021
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src=".jpg" alt="" />
 									</span>
 									<a href="jawaban/">
 										<h2>3 jawaban buatmu!</h2>
