--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu bua
 					<header>
 						<h2>Sesuatu</h2>
 					</header>
-					<p>Untuk semua yang ada disini emang gabanyak sih, but ya. Hope ur have fun with this one, hehe. Really hope that ur gonna like it!. "Oiya kalo nyari sesuatu, kalo ganemu nanti deh aku kasih tau!, wkwk", Happy hunting too!.</p>
+					<p>HEHE KETEMU JUGA YA!, WKWK. Untuk semua yang ada disini emang gabanyak sih, but ya. Hope ur have fun with this one, hehe. Really hope that ur gonna like it!. "Oiya kalo nyari sesuatu, kalo ganemu nanti deh aku kasih tau!, wkwk", Happy hunting too!.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
