--- a/note/index.html
+++ b/note/index.html
@@ -37,7 +37,7 @@ Yahya Arya Putra, 14 april 2021
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="https://shiroezero.github.io/aorasaphiere/note">Home</a></li>
+							<li><a href="https://shiroezero.github.io/aorasaphiere">Home</a></li>
 						</ul>
 					</nav>
 
