--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Kamu nemuin samting disini, yang jelas kalo kamu nemuin ini, aku pengen kamu bua
 		<!-- Header -->
 			<header id="header">
 				<h1>
-					Happy Birthday, Aora!</h1>
+					Met Ultah Cantikk!</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Ucapku</a></li>
